# malaya_speech_cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data/: output
data/input/: sample.txt
src/: config.py  main.py  tts.py
src/utils/: audio.py  text.py
tests/: test_tts.py  test_utils.py
