[project]
name = "malaya-speech-cli"
version = "0.1.0"
description = "A CLI application for generating audio files from text using Malaya Speech TTS VITS multispeaker model."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "malaya-speech>=1.3.0.2",
    "pyaudio>=0.2.14",
    "tensorflow[and-cuda]>=2.18.0",
]
